--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script
+      src="./node_modules/flowbite/dist/flowbite.min.js"
+      type="module"
+    ></script>
   </body>
 </html>
